--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - test
 
 test:
-  image: cypress/browsers:node-22.11.0-chrome-130.0.6723.69-1-ff-132.0-edge-130.0.2849.56-1
+  image: node:latest
   stage: test
   script:
     # install dependencies
@@ -10,11 +10,4 @@ test:
     # start the server in the background
     - npm start &
     # run Cypress tests
-    - npx cypress run --browser firefox
-
-
-
-
-
-
-
+    - npm run e2e
